--- a/mongodb/manifest.yaml
+++ b/mongodb/manifest.yaml
@@ -33,6 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
+  namespace: roboshop
   labels:
     component: mongodb
     project: roboshop
