--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -40,6 +40,9 @@ spec:
       containers:
       - name: catalogue
         image: siva316/catalogue:v1
+        envFrom:
+          - configMapRef:
+              name: catalogue
 ---
 apiVersion: v1
 kind: Service
