--- a/mysql/secret-manifest.yaml
+++ b/mysql/secret-manifest.yaml
@@ -39,9 +39,12 @@ spec:
         image: amazon/aws-cli
         command:
         - sh
-        - c
+        - -c
         - |
-          aws secretsmanager get-secret-value --secret-id roboshop/mysql/password --query SecretString --output text | jq -r .MYSQL_ROOT_PASSWORD > /tmp/mysql_root_password.text  
+          aws secretsmanager get-secret-value \ 
+          --secret-id roboshop/mysql/password \
+          --query SecretString \
+          --output text | jq -r .MYSQL_ROOT_PASSWORD > /tmp/mysql_root_password.text  
         volumeMounts:
         - mountPath: /tmp
           name: mysql-secret          
