--- a/mysql/secret-manifest.yaml
+++ b/mysql/secret-manifest.yaml
@@ -41,10 +41,7 @@ spec:
         - sh
         - -c
         - |
-          aws secretsmanager get-secret-value \ 
-          --secret-id roboshop/mysql/password \
-          --query SecretString \
-          --output text | jq -r .MYSQL_ROOT_PASSWORD > /tmp/mysql_root_password.text  
+          aws secretsmanager get-secret-value --secret-id roboshop/mysql/password --query SecretString --output text | jq -r .MYSQL_ROOT_PASSWORD > /tmp/mysql_root_password.text  
         volumeMounts:
         - mountPath: /tmp
           name: mysql-secret          
