--- a/mysql/secret-manifest.yaml
+++ b/mysql/secret-manifest.yaml
@@ -30,7 +30,8 @@ spec:
         emptyDir: {}
       containers:
       - name: mysql
-        image: siva316/mysql:v1
+        image: siva316/mysql:v2
+        imagePullPolicy: Always
         volumeMounts:
         - mountPath: /tmp
           name: mysql-secret  
